--- a/Thesis.tex
+++ b/Thesis.tex
@@ -406,7 +406,7 @@ I have, once again, benefited from a quadraphonic speaker setup, and this time t
 
 Binmatu will be an ongoing project. Over the course of a year and a half, it has progressed from the uncertain coasts of a self-searching vocal performance to a clean and direct \emph{digitalism}. I still see myself as having a lack of expertise in the performative aspect of this music. I feel that I need to research more artwork that deals with the combination of music and spiritual experiences; ways of reaching deep into human mind (further than simple emotions) through the medium of sound. 
 
-After one of the Binmatu performances, a composer studying classical composition in Slovakia had a very strange experience. He told me that he had ``been places and remembered things which he believed were long forgotten''. I view this as a beautiful compliment, especially because at that point I knew I wasn't alone in perceiving the psyche-delic (I choose to divide this word to embrace its original meaning) energy stored within these simple sounds. The other compliment that I want to relate was from a girl who said that she was not able to focus on any other music after my performance. My music had worked some kind of special spell which simply did not let her concentrate during the rest of festival. I found this quite beautiful, and I was astonished that my pieces could reach such a level of impact. How far can I possibly reach?
+After one of the Binmatu performances, a composer studying classical composition in Slovakia had a very strange experience. He told me that he had ``been places and remembered things which he believed were long forgotten''. I view this as a beautiful compliment, especially because at that point I knew I was not alone in perceiving the psyche-delic (I choose to divide this word to embrace its original meaning) energy stored within these simple sounds. The other compliment that I want to relate was from a girl who said that she was not able to focus on any other music after my performance. My music had worked some kind of special spell which simply did not let her concentrate during the rest of festival. I found this quite beautiful, and I was astonished that my pieces could reach such a level of impact. How far can I possibly reach?
 
 For the future, I see myself starting to work on Binmatu installations as well. It will be an effort to transform my performance into infinite streams of sound and visuals, embracing the site-specificity---using the acoustic properties of space, illusion, and utilizing resonating objects as speakers through the use of tactile transducers.
 
@@ -416,7 +416,7 @@ For the future, I see myself starting to work on Binmatu installations as well. 
 
 \subsection{Introduction} 
 
-During the scholastic year of 2011 / 2012, I was an Erasmus exchange student at the Academy of Music in Kraków. This visit resulted in a few different collaborations. One of my main collaborators was Agnes Szelag, who was on a Fulbright residency at the Academy at the same time.  Agnes is a Polish-American sound artist, performer, composer, and educator. She has performed and presented her work in festivals around the U.S.A. and Europe. She has also authored various audio-visual installations in galleries, museums, and site-specific locations. She received her Master’s Degree in Electronic Music from Mills College in Oakland, California.
+During the scholastic year of 2011 / 2012, I was an Erasmus exchange student at the Academy of Music in Kraków. This visit resulted in a few different collaborations. One of my main collaborators was Agnes Szelag, who was on a Fulbright residency at the Academy at the same time.  Agnes is a Polish-American sound artist, performer, composer, and educator. She has performed and presented her work in festivals around the U.S.A. and Europe. She has also authored various audio-visual installations in galleries, museums, and site-specific locations. She received her Master’s Degree in Electronic Music from Mills College in Oakland, California \cite{szelag}.
 
 At the beginning of the year, Szelag started a group called the \emph{Kraków Active Ensemble}, which connected various musicians from the conservatory into a unifying experience of free improvisation and graphic scores. For my part in the group, I mostly used my own software that I had programmed in Max, which I named \emph{JONO}. The ensemble performed at various galleries, electroacoustic events, and open jam sessions.
 
@@ -443,7 +443,7 @@ An important detail to note was that in the end, the whole system was running wi
 
 After the more technical part of the installation was finished, we started to focus on the sequencing and general aesthetics of the installation.  We abandoned our initial idea of using a pre-programmed (or pre-composed) sequence and started to think more about creating a generative algorithm for the system.
 
-The first algorithmic idea was to create a set of metronomes controlling the rhythms of robots in a fashion similar to Ligeti’s \emph{Poème symphonique}. In this scenario, there would be one metronome per robot with a slightly higher (in linear increments) tempo than the previous, e.g.\ there would be one with a tempo of 60 BPM, the next with 64, the next with 68, and so on. We wanted to create a situation in which the insects would start in sync with each other, then slowly disperse into variations, and eventually return to a sync. After I did some calculations, I concluded that it would be impossible to keep a slow sync start and realize a reasonable length for the whole cycle (from sync to sync). According to my calculations, the cycle length would range from tens of hours to hundreds of days. The participant’s perception of synchronization was at the core of our concept, so we decided to create artificial resets – resynchronizations - so that a participant could experience a few during their visit (generally 5-10 minutes of active observation per person). During resynchronization, a new set of tempos would be picked from the database and the whole sequence would start again.
+The first algorithmic idea was to create a set of metronomes controlling the rhythms of robots in a fashion similar to Ligeti’s \emph{Poème symphonique}. In this scenario, there would be one metronome per robot with a slightly higher (in linear increments) tempo than the previous, e.g.\ there would be one with a tempo of 60 BPM, the next with 64, the next with 68, and so on. We wanted to create a situation in which the insects would start in sync with each other, then slowly disperse into variations, and eventually return to a sync. After I did some calculations, I concluded that it would be impossible to keep a slow sync start and realize a reasonable length for the whole cycle (from sync to sync). According to my calculations, the cycle length would range from tens of hours to hundreds of days. The participant’s perception of synchronization was at the core of our concept, so we decided to create artificial resets---resynchronizations---so that a participant could experience a few during their visit (generally 5-10 minutes of active observation per person). During resynchronization, a new set of tempos would be picked from the database and the whole sequence would start again.
 
 The whole installation was set up (as mentioned) in my apartment with the power core of the system installed in the ceiling instead of a lamp. I replaced the lamp with an electrical socket, so in the end it was possible to turn on the whole installation just by flipping a standard light switch.
 
