--- a/general.bib
+++ b/general.bib
@@ -39,6 +39,19 @@
 	Urldate = {March 23, 2013},
 	Year = {2013},
 	Bdsk-Url-1 = {http://www.1010.co.uk}}
+	
+@url{szelag,
+	Author = {Szelag, Agnes},
+	Date-Added = {2013-05-01 10:12:23 +0000},
+	Date-Modified = {2013-05-01 10:34:20 +0000},
+	Lastchecked = {May 14, 2013},
+	Title = {{A}gnes {S}zelag},
+	Url = {http://www.agnesszelag.com/bio/},
+	Urldate = {May 14, 2013},
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.agnesszelag.com/bio/}}
+	
+	
 
 @book{Hermann2011,
 	Address = {Berlin},
