--- a/Thesis.tex
+++ b/Thesis.tex
@@ -5,15 +5,16 @@
 %\setulmarginsandblock{2cm}{2cm}{*}
 %\checkandfixthelayout
 
+\usepackage[utf8]{inputenc} 
 \usepackage[pdftex,
-            pdfauthor={Jonáš Gruska},
-            pdftitle={Streams & Currents},
+            pdfauthor={Jonas Gruska},
+            pdftitle={Streams \& Currents},
             pdfsubject={Wireless Network Sonification and other works},
             pdfkeywords={sonification, wireless networks, soundart, installations},
             pdfproducer={LaTeX with hyperref},
             pdfcreator={pdflatex}]{hyperref}
 
-\usepackage[utf8]{inputenc} 
+
 \usepackage{xcolor}
 \definecolor{red}{HTML}{AD1737}
 \usepackage{hyperref}
