--- a/Thesis.tex
+++ b/Thesis.tex
@@ -32,7 +32,7 @@
 \usepackage{float}
 \usepackage{setspace}
 \usepackage{anyfontsize}
-\usepackage{microtype}
+\usepackage[activate={true,nocompatibility},final,kerning=true,spacing=true,factor=1100]{microtype}
 
 \onehalfspacing
 \usepackage{tikz}
@@ -61,6 +61,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{
+\vspace{2cm}
 {\fontsize{43}{30}\selectfont \color{red}\sc{Streams~\&~Currents}}\\
 {\fontsize{15}{15}\selectfont \emph{Wireless Network Sonification and other works}} 
 }
@@ -431,7 +432,7 @@ For the future, I see myself starting to work on Binmatu installations as well. 
 
 \subsection{Introduction} 
 
-During the scholastic year of 2011 / 2012, I was an Erasmus exchange student at the Academy of Music in Kraków. This visit resulted in a few different collaborations. One of my main collaborators was Agnes Szelag, who was on a Fulbright residency at the Academy at the same time.  Agnes is a Polish-American sound artist, performer, composer, and educator. She has performed and presented her work in festivals around the U.S.A. and Europe. She has also authored various audio-visual installations in galleries, museums, and site-specific locations. She received her Master’s Degree in Electronic Music from Mills College in Oakland, California \cite{szelag}.
+During the scholastic year of 2011/2012, I was an Erasmus exchange student at the Academy of Music in Kraków. This visit resulted in a few different collaborations. One of my main collaborators was Agnes Szelag, who was on a Fulbright residency at the Academy at the same time.  Agnes is a Polish-American sound artist, performer, composer, and educator. She has performed and presented her work in festivals around the U.S.A. and Europe. She has also authored various audio-visual installations in galleries, museums, and site-specific locations. She received her Master’s Degree in Electronic Music from Mills College in Oakland, California \cite{szelag}.
 
 At the beginning of the year, Szelag started a group called the \emph{Kraków Active Ensemble}, which connected various musicians from the conservatory into a unifying experience of free improvisation and graphic scores. For my part in the group, I mostly used my own software that I had programmed in Max, which I named \emph{JONO}. The ensemble performed at various galleries, electroacoustic events, and open jam sessions.
 
