--- a/Thesis.tex
+++ b/Thesis.tex
@@ -33,6 +33,7 @@
 \usepackage{setspace}
 \usepackage{anyfontsize}
 \usepackage[activate={true,nocompatibility},final,kerning=true,spacing=true,factor=1100]{microtype}
+\usepackage[font=small]{caption}
 
 \onehalfspacing
 \usepackage{tikz}
@@ -61,7 +62,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{
-\vspace{2cm}
+\vspace{1,5cm}
 {\fontsize{43}{30}\selectfont \color{red}\sc{Streams~\&~Currents}}\\
 {\fontsize{15}{15}\selectfont \emph{Wireless Network Sonification and other works}} 
 }
