--- a/general.bib
+++ b/general.bib
@@ -94,7 +94,7 @@
 	Isbn = {9783832528195 (pbk.)},
 	Library-Id = {2011525563},
 	Publisher = {Logos Verlag},
-	Title = {The {s}onification {h}andbook},
+	Title = {The {S}onification {H}andbook},
 	Year = {2011}}
 
 @inproceedings{audif,
@@ -318,7 +318,7 @@
 	}
 	
 @misc{jegen,
-	Title = {{De frequentie van materiaal | Jegens & Tevens}},
+	Title = {{De frequentie van materiaal | Jegens \& Tevens}},
 	Urldate = {May 5, 2013},
 	Year = {2013},
 	Url = {http://jegensentevens.nl/2013/03/de-frequentie-van-materiaal/}
